Add nice layout for types of recipe card ~

--- a/src/components/RecipeCard/styles.css
+++ b/src/components/RecipeCard/styles.css
@@ -54,6 +54,8 @@ body {
 .card .front {
     background: #ffffff;
     padding: 20px;
+    /* font in the center */
+    text-align: center; /* Center text horizontally */
 }
 
 .card .front h3 {
