--- a/src/components/BackgroundPattern/styles.css
+++ b/src/components/BackgroundPattern/styles.css
@@ -25,8 +25,9 @@
   right: 0;
   bottom: 0;
   z-index: -1;
-  background-image: url('https://previews.123rf.com/images/krekdm/krekdm1607/krekdm160700299/61898029-seamless-food-pattern-can-be-used-for-wallpaper-website-background-wrapping-paper-restaurant-bright.jpg'); /* Replace with your pattern image */
-  background-repeat: repeat;
-  background-size: contain;
-  background-color: var(--pattern-color);
+  background-image: url('../../assets/main_background.png'); /* Replace with your pattern image */
+  background-size: cover; /* Ensure the background covers the whole element */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
+  background-color: var(--pattern-color); /* Background color if the image is not covering the whole area */
 }
