--- a/src/components/RecipeCard/styles.css
+++ b/src/components/RecipeCard/styles.css
@@ -13,7 +13,7 @@ body {
 
 .card {
     width: 280px;
-    height: 400px;
+    height: 300px;
     position: relative;
     transform-style: preserve-3d;
     transform: rotateY(0deg);
@@ -52,9 +52,9 @@ body {
 }
 
 .card .front {
+    position: relative;
     background: #ffffff;
-    padding: 20px;
-    /* font in the center */
+    /* padding: 20px; */
     text-align: center; /* Center text horizontally */
 }
 
@@ -62,6 +62,16 @@ body {
     margin-bottom: 10px;
     font-family: 'Cinzel', serif;
     font-size: 1.5rem;
+
+    position: absolute;
+    bottom: 0; /* Adjust as necessary */
+    left: 0; /* Adjust as necessary */
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 10px; /* Adjust as necessary */
 }
 
 .card .front p {
@@ -70,6 +80,7 @@ body {
 }
 
 .card img {
-    width: 100%;
     border-radius: 10px 10px 0 0;
+    width: 100%;
+    height: 100%;
 }
