--- a/src/pages/Navbar.css
+++ b/src/pages/Navbar.css
@@ -1,12 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+
 .navbar {
-  background-color: #f8f8f8;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: rgba(46, 46, 46, 0.2);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 0 20px;
   top: 0;
+  left: 23.8%; /* This ensures the navbar is centered */
+  width: 50%; /* Navbar width is 50% of the website width */
   z-index: 1000;
+  position: fixed;
+}
+
+.navbar::before {
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 50%;
+  height: 20px;
+  border-bottom-left-radius: 50% 20px;
+  background: inherit;
+}
+
+.navbar::after {
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  right: 0;
+  width: 50%;
+  height: 20px;
+  border-bottom-right-radius: 50% 20px;
+  background: inherit;
 }
 
 .navbar-container {
+  max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -15,15 +46,20 @@
 }
 
 .navbar-title {
+  font-family: 'Pacifico', cursive;
   font-size: 2em;
-  color: #333;
+  color: #ffffff;
   text-decoration: none;
   font-weight: bold;
-  transition: color 0.3s;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.navbar-title:hover {
-  color: #e44d26;
+.navbar-icon {
+  width: 32px;
+  height: 32px;
+  fill: #ffcc00;
 }
 
 .navbar-list {
@@ -35,17 +71,28 @@
 
 .nav-item {
   margin-right: 20px;
+  border-radius: 12px;
+  overflow: hidden;
 }
 
 .nav-links {
   text-decoration: none;
-  color: #333;
+  color: #ffffff;
   font-size: 1em;
   transition: all 0.3s;
   font-weight: 500;
+  border-radius: 12px;
+  padding: 5px 15px;
+  background: rgba(255, 255, 255, 0.1);
 }
 
 .nav-links:hover {
-  color: #e44d26;
-  transform: translateY(-2px);
+  color: #ffcc00;
+  background-color: rgba(255, 204, 0, 0.2);
+}
+
+.navbar-icon {
+  width: 64px;
+  height: 64px;
+  fill: #ffcc00;
 }
