--- a/src/components/SearchBox/styles.css
+++ b/src/components/SearchBox/styles.css
@@ -1,9 +1,18 @@
 .search-box {
-    width: 250px;
-    padding: 10px 20px;
-    border-radius: 25px;
+    width: 350px;
     border: none;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
     outline: none;
     font-size: 16px;
+}
+
+.search-result {
+    display: flex;
+    direction: row;
+    align-items: center;
+}
+
+.search-result img {
+    border-radius: 25%;
+    padding-right: 10px;
 }
