--- a/src/components/SearchBox/styles.css
+++ b/src/components/SearchBox/styles.css
@@ -16,3 +16,13 @@
     border-radius: 25%;
     padding-right: 10px;
 }
+
+.search-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.search-content-category {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+}
