Change some style
- change the background and style

--- a/src/components/BackgroundPattern/styles.css
+++ b/src/components/BackgroundPattern/styles.css
@@ -24,8 +24,8 @@ Base Styles and Variables :root {
   right: 0;
   bottom: 0;
   z-index: -1;
-  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-    url(/assets/main_background.png);
+   background-image: url(../../../public/assets/background.png); 
+    background-color: aqua;
   background-size: cover; /* Ensure the background covers the whole element */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Prevent the image from repeating */
