--- a/frontend/src/components/RecipeUpload/RecipeUploadForm.css
+++ b/frontend/src/components/RecipeUpload/RecipeUploadForm.css
@@ -81,6 +81,10 @@ input:focus {
   height: 250px;
 }
 
+.image-info {
+  text-align: center;
+}
+
 /* Style for the upload image button */
 .upload-btn-wrapper {
   position: absolute;
