--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 
 .navbar {
   background-color: rgba(46, 46, 46, 0.2);
@@ -6,16 +6,15 @@
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   padding: 0 20px;
   top: 0;
-  left: 10%; /* This ensures the navbar is centered */
-  width: 80%; /* Navbar width is 50% of the website width */
+  left: 2px;
+  width: 97%;
   z-index: 1000;
   position: fixed;
   border-radius: 15px;
 }
 
-
 .navbar-container {
-  max-width: 1200px;
+  /* max-width: 1200px; */
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -25,7 +24,7 @@
 }
 
 .navbar-title {
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   font-size: 2em;
   color: rgb(237, 231, 231);
   text-decoration: none;
@@ -57,7 +56,7 @@
 
 .nav-links {
   text-decoration: none;
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   color: rgb(246, 239, 239);
   font-size: 1em;
   transition: all 0.3s;
@@ -77,3 +76,11 @@
   height: 64px;
   fill: #ffcc00;
 }
+
+/* .search-box-wrapper {
+  grid-column: 2;
+  grid-row: 1/3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
