--- a/frontend/src/components/RecipeDashboard/HomePageDashBoard.css
+++ b/frontend/src/components/RecipeDashboard/HomePageDashBoard.css
@@ -16,15 +16,9 @@
 }
 
 .card-layout {
+  margin-top: 80px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
 
-.search-box-wrapper {
-  grid-column: 2;
-  grid-row: 1/3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
