--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -77,10 +77,8 @@
   fill: #ffcc00;
 }
 
-/* .search-box-wrapper {
-  grid-column: 2;
-  grid-row: 1/3;
+.search-box-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-} */
+}
