All backend API connect to DB, and complete Recipe Upload in frontend

--- a/frontend/src/components/RecipeUpload/RecipeUploadForm.css
+++ b/frontend/src/components/RecipeUpload/RecipeUploadForm.css
@@ -49,6 +49,7 @@ input:focus {
   margin: auto;
   padding: 20px;
   position: relative; /* For absolute positioning of elements inside */
+  top: 20px;
 }
 
 .recipe-upload-form form {
